--- a/views/details.handlebars
+++ b/views/details.handlebars
@@ -4,3 +4,6 @@
     <li><strong>Phone:</strong> {{user.phone}}</li>
 </ul>
 <a class="btn btn-default" href="/">Back</a>
+<form method="POST" action="/user/delete/{{user.id}}?_method=DELETE">
+  <button type="submit" class="btn btn-danger">Delete User</button>
+</form>
