--- a/views/details.handlebars
+++ b/views/details.handlebars
@@ -3,7 +3,7 @@
     <li><strong>Email:</strong> {{user.email}}</li>
     <li><strong>Phone:</strong> {{user.phone}}</li>
 </ul>
-<a class="btn btn-default" href="/">Back</a>
+<a class="btn btn-success" href="/">Back</a>
 <form method="POST" action="/user/delete/{{user.id}}?_method=DELETE">
   <button type="submit" class="btn btn-danger">Delete User</button>
 </form>
